fixed overflow

--- a/css/itr-landing.css
+++ b/css/itr-landing.css
@@ -952,12 +952,8 @@
       .clientReview .carousel-inner {
         padding: 0 2rem;
       }
+      .countrySection figure span {
+        right: 25%;
     }
-    @media(max-width:600px){
-        .aos-init{
-            overflow: hidden;
-        }
-        .aos-animate{
-            overflow: hidden;
-        }
-    }
+  }  
+ 
